src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ER_AmendedFromContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amended From Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amended Opportunities</relationshipLabel>
        <relationshipName>AmendedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_AmendedFromOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amended From Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_BU_Picklist__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_NeedApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Payment_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Product_Family</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cross selling</fullName>
                </value>
                <value>
                    <fullName>Regain</fullName>
                </value>
                <value>
                    <fullName>Digitalisation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_ReimbursementTerm__c</fullName>
        <label>Reimbursement Term</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Reimbursement_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Estimated_Number_Of_Beneficiaries__c</fullName>
        <label>Estimated Number Of Beneficiaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Estimated_Yearly_Redemption_Volume__c</fullName>
        <label>Estimated Yearly Redemption Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_Face_Value__c</fullName>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Indexation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Indexation_Index__c</fullName>
        <label>Indexation Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer price index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_InvoicingFrequency__c</fullName>
        <label>Invoicing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Invoicing_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_IsAmended__c</fullName>
        <formula>OR(
            NOT(ISBLANK(ER_AmendedFromOpportunity__c)),
            NOT(ISBLANK(ER_AmendedFromContract__c))
            )
        </formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amended ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Loads_Per_Year__c</fullName>
        <label>Loads Per Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>Occasionally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Nb_of_Employees__c</fullName>
        <label>Nb of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Nb_of_Months__c</fullName>
        <label>Nb of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Nb_of_working_Days__c</fullName>
        <label>Nb of working Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Reimbursement_Volume__c</fullName>
        <inlineHelpText>For an existing Merchant, please use the N-1 reimbursement volume. For a new Merchant, this field has to be populated with a Yearly estimation of the reimbursement volume</inlineHelpText>
        <label>Yearly Reimbursement Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_Won_Reason__c</fullName>
        <label>Won Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Payment terms</fullName>
                </value>
                <value>
                    <fullName>Relations</fullName>
                </value>
                <value>
                    <fullName>Product functionality</fullName>
                </value>
                <value>
                    <fullName>Value added product services</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Flexibility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Total_Amount__c</fullName>
        <inlineHelpText>Equal to the Monthly Order Amount for a Ticket Restaurant Product, a Total amount for a ticket Compliment Product ...</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_UTM_tag__c</fullName>
        <label>UTM tag</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Yearly_Commission_Amount__c</fullName>
        <inlineHelpText>Equal to Yearly Reimbursement Volume * Commission applied</inlineHelpText>
        <label>Yearly Commission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ER_Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cafeteria</fullName>
                </value>
                <value>
                    <fullName>Prefer vouchers</fullName>
                </value>
                <value>
                    <fullName>Relations</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Payment terms</fullName>
                </value>
                <value>
                    <fullName>Own solutions</fullName>
                </value>
                <value>
                    <fullName>Ease of distribution</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Program end</fullName>
                </value>
                <value>
                    <fullName>Brand awareness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERPL_Business_Value__c</fullName>
        <label>Business Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPL_Competitors__c</fullName>
        <label>Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Benefit System</fullName>
                </value>
                <value>
                    <fullName>Canteen</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Monobrands</fullName>
                </value>
                <value>
                    <fullName>Multisport</fullName>
                </value>
                <value>
                    <fullName>No money</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other agency</fullName>
                </value>
                <value>
                    <fullName>Own solution</fullName>
                </value>
                <value>
                    <fullName>Sodexo cards</fullName>
                </value>
                <value>
                    <fullName>Sodexo vouchers</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>upBonus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SK_Credit_Note_Frequency__c</fullName>
        <label>Credit Note Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>monthly</fullName>
                </value>
                <value>
                    <fullName>quarterly</fullName>
                </value>
                <value>
                    <fullName>yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SK_Payment_Terms_Voucher__c</fullName>
        <label>Payment Terms Voucher</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BU_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ER_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>MY</value>
        </filters>
        <label>Client Opportunities</label>
        <sharedTo>
            <role>Client_Sales_Manager</role>
            <role>Client_Sales_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>ERPL_Poland_All_Opportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_BU_Picklist__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>Poland: All Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
            <role>Client_Sales_Manager</role>
            <role>Customer_Service_Manager</role>
            <role>Merchant_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ER_Client_Opportunity_RT</fullName>
        <active>true</active>
        <businessProcess>Client Opportunity Process</businessProcess>
        <label>Client Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Merchant_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Merchant Opportunity Process</businessProcess>
        <label>Merchant Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER01_Opportunity_ClosedWonBlockEdit</fullName>
        <active>true</active>
        <description>When stage is set to “Closed won”, the opportunity record cannot be edited.</description>
        <errorConditionFormula>AND(
                NOT($User.ER_BypassVR__c),
                ISPICKVAL( PRIORVALUE(StageName), 'Closed won'),
                NOT(ISCHANGED( LastModifiedDate ))
                )</errorConditionFormula>
        <errorMessage>When stage is set to “Closed won”, the opportunity record cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER02_ClosedWonWithoutContract</fullName>
        <active>true</active>
        <description>The linked contract must be active to close the opportunity as ‘Won’</description>
        <errorConditionFormula>AND(
                    NOT($User.ER_BypassVR__c),
                    NOT(ISPICKVAL($User.ER_Business_Unit__c , 'PL')),
                    ISPICKVAL( StageName, 'Closed won'),
                    NOT(ISPICKVAL( PRIORVALUE(StageName), 'Closed won')),
                    NOT(ISPICKVAL(Contract.Status, 'Activated'))
                    )</errorConditionFormula>
        <errorMessage>The linked contract must be active to close the opportunity as ‘Won’</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRPL01_Competitor_Obligatory</fullName>
        <active>true</active>
        <description>Competitor value is obligatory in case of the lost reason is equal &quot;Lost to Competitor&quot;</description>
        <errorConditionFormula>AND(
                        NOT($User.ER_BypassVR__c),
                        RecordType.DeveloperName = &quot;ER_Client_Opportunity_RT&quot;,
                        ISPICKVAL( ER_Lost_Reason__c  ,&quot;Lost to Competitor&quot;), 
                        (ISBLANK(TEXT(  ERPL_Competitors__c  ))
                        ))</errorConditionFormula>
        <errorDisplayField>ERPL_Competitors__c</errorDisplayField>
        <errorMessage>The field Competitors must be filled in order to register the Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRPL02_LostReason_Obligatory</fullName>
        <active>true</active>
        <description>Lost Reason is obligatory in case of the Opportunity Satus = Closed Lost</description>
        <errorConditionFormula>AND(
                            NOT($User.ER_BypassVR__c),
                            RecordType.DeveloperName = &quot;ER_Client_Opportunity_RT&quot;,
                            ISPICKVAL(  StageName  ,&quot;Closed Lost&quot;), 
                            (ISBLANK(TEXT( ER_Lost_Reason__c ))
                            ))</errorConditionFormula>
        <errorDisplayField>ER_Lost_Reason__c</errorDisplayField>
        <errorMessage>The field Lost Reason must be filled in order to register the Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRSK01_Credit_Limit_Mandatory</fullName>
        <active>true</active>
        <description>The field Credit Limit must be filled in order to register the Opportunity</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
ISPICKVAL( $User.ER_Business_Unit__c, &apos;SK&apos;), 
ISBLANK(TEXT( ER_Credit_Limit__c )),
NOT(ISBLANK( TEXT(ER_PaymentTerms__c) ))
)</errorConditionFormula>
        <errorMessage>The field Credit Limit must be filled in order to register the Opportunity</errorMessage>
    </validationRules>
</CustomObject>